kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
      - name: movie-service
        image: jlnlndr17/movie-service:v1.0
        ports:
        - containerPort: 8000
