kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: dev
spec:
  selector:
    app: movie-service
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
