kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/movies/(.*)
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 8000
      - path: /api/v1/casts/(.*)
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 8000
